--- a/Bike_Sharing_Data_Analisis.ipynb
+++ b/Bike_Sharing_Data_Analisis.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Insynigittt/Bike-Sharing-Datasets/blob/main/Bike_Sharing_Data_Analisis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "H9wADwK78DCz"
       },
       "source": [
@@ -1828,8 +1818,7 @@
       }
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
